applications/proxy/botju/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: botju-proxy
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 9200
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: botju-proxy
subsets:
- addresses:
  - ip: 192.168.178.47
  ports:
  - name: app
    port: 9200
    protocol: TCP
