applications/proxy/botju/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: botju-ingress
spec:
  rules:
    - host: botju.home.juli.sh
      http:
        paths:
          - backend:
              service:
                name: botju-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - botju.home.juli.sh
      secretName: botju-tls
